welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: '=' expected but ';' found.
  if estSurBiscuit {
^Program:3: error: '(' expected but identifier found.
  if estSurBiscuit {
     ^